# fingertip

./: .gitignore  CONTRIBUTORS  Dockerfile  INSTALL.md  PUBLISHING.md  README.md  __main__.py  fingertip-containerized  pyproject.toml  saviour.example.yml  shell.nix  test.py  test.sh
.copr/: Makefile  build-local.sh
docs/: on_transiency.md  user_plugins.md
fingertip/: __init__.py  exec.py  expiration.py  machine.py  main.py  step_loader.py  time_desync.py
fingertip/plugins/: ansible.py  cleanup.py  console.py  exec.py  filesystem.py  no_op.py  reboot.py  saviour.py  script.py  ssh.py  transient.py  unseal.py
fingertip/plugins/backend/: podman-criu.py  podman_criu.py  qemu.py
fingertip/plugins/os/: alpine.py  centos-stream.ks  centos-stream.py  centos_stream.ks  centos_stream.py  cloud-init.py  cloud_init.py  fedora.py  fedora_eln.ks  fedora_eln.py
fingertip/plugins/os/common/: red_hat_based.py
fingertip/plugins/script/: __init__.py  _run_and_test.py  debug.py
fingertip/plugins/self_test/: console_greeting.py  exec.py  greeting.py  hostname.py  prompts.py  script.py  ssh_terminate.py  subshell.py  wait_for_it.py
fingertip/plugins/software/: fingertip.py
fingertip/util/: cleanup_job.py  free_port.py  git_cache.py  hooks.py  http_cache.py  lock.py  log.py  optional_pretty_backtraces.py  path.py  reflink.py  repeatedly.py  temp.py  units.py  weak_hash.py
kickstart_templates/: fedora31  fedora32  fedora33  fedora34  fedora35  fedora38  fedora40  fedora41  fedora42  fedora44
rpm/: build.sh  fingertip-shared-cache-demolish  fingertip-shared-cache-grow  fingertip-shared-cache-setup  fingertip-shared-cache-use  fingertip-shared-cache.service  fingertip.spec  fingertip.template.spec
ssh_key/: fingertip  fingertip.paramiko  fingertip.pub
