[tool.poetry]
name = "fingertip"
description = "Control VMs, containers and other machines with Python, leverage live snapshots"
version = "0.0.0"
readme = "README.md"
repository = "https://github.com/t184256/fingertip"
authors = ["Alexander Sosedkin <asosedki@redhat.com>"]
license = "GPL-3.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.6"
CacheControl = "^0.12.6"
pyxdg = "^0.26"
colorlog = "^4.1.0"
paramiko = "^2.7.1"
pexpect = "^4.8.0"
requests = "^2.23.0"
requests-mock = "^1.7.0"
fasteners = "^0.15"
lockfile = "^0.12.2"
cloudpickle = "^1.3.0"
GitPython = "^3.1.0"

[tool.poetry.scripts]
fingertip = "fingertip.main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
