[tool.poetry]
name = "fingertip"
description = "Control VMs, containers and other machines with Python, leverage live snapshots"
version = "0.0.0"
readme = "README.md"
include = ["ssh_key/*", "kickstart_templates/*"]
exclude = ["fingertip/plugins/redhat"]
repository = "https://github.com/t184256/fingertip"
authors = ["Alexander Sosedkin <asosedki@redhat.com>"]
license = "GPL-3.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.8"
CacheControl = {version="^0.14.0", extras=["filecache"]}
pyxdg = "^0.28"
colorama = "^0.4.6"
paramiko = "^3.4.1"
pexpect = "^4.9.0"
requests = "^2.32.3"
requests-mock = "^1.12.1"
fasteners = "^0.19"
lockfile = "^0.12.2"
cloudpickle = "^3.0.0"
rangehttpserver = "^1.4.0"
inotify_simple = "^1.3.5"
GitPython = "^3.1.34"

[tool.poetry.scripts]
fingertip = "fingertip.main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
